--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon</title>
     <!-- Main tempelate css file -->
-    <link rel="stylesheet" href="/css/Leon.css">
+    <link rel="stylesheet" href="css/Leon.css">
     <!-- render al elements normally -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- Fon awesome library -->
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     <!-- start header -->
     <div class="header">
         <div class="container">
-            <img src="/images/logo.png" class="logo" alt="logo">
+            <img src="images/logo.png" class="logo" alt="logo">
             <div class="links">
                 <span class="icon">
                     <span></span>
@@ -122,7 +122,7 @@
                 </div> 
                 <div class="col">
                     <div class="image img">
-                        <img src="/images/rohit-tandon-9wg5jCEPBsw-unsplash.jpg" alt="">
+                        <img src="images/about.jpg" alt="">
                     </div>
                 </div>
             </div>
